# marvel

3_phase/: CMakeLists.txt
3_phase/src/: 3_phase.cpp
biglcd/: .gitignore  CMakeLists.txt
biglcd/lib/LCD12864R/: LCD12864R.cpp  LCD12864R.h
biglcd/src/: biglcd.cpp
bldc_motor/: CMakeLists.txt
bldc_motor/BLDC/: BLDC.ino
bldc_motor/src/: bldc_motor.cpp
